// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiIconTip is rendered 1`] = `
<span
  class="ouiToolTipAnchor"
>
  <span
    aria-label="aria-label"
    data-ouiicon-type="questionInCircle"
    tabindex="0"
  />
</span>
`;

exports[`OuiIconTip props color is rendered as the icon color 1`] = `
<span
  class="ouiToolTipAnchor"
>
  <span
    aria-label="Info"
    color="warning"
    data-ouiicon-type="questionInCircle"
    tabindex="0"
  />
</span>
`;

exports[`OuiIconTip props size is rendered as the icon size 1`] = `
<span
  class="ouiToolTipAnchor"
>
  <span
    aria-label="Info"
    data-ouiicon-type="questionInCircle"
    tabindex="0"
  />
</span>
`;

exports[`OuiIconTip props type is rendered as the icon 1`] = `
<span
  class="ouiToolTipAnchor"
>
  <span
    aria-label="Info"
    data-ouiicon-type="alert"
    tabindex="0"
  />
</span>
`;
